--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,17 +1,30 @@
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th class="text-center">Catégories</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let category of categories">
-      <th>{{ category.name | uppercase}}</th>
-      <td><button type="button" class="btn btn-warning">Modifier</button></td>
-      <td><button type="button" class="btn btn-danger">Supprimer</button></td>
-    </tr>
-  </tbody>
-</table>
+<div class="container">
+  <ngb-accordion [closeOthers]="true">
+    <ngb-panel *ngFor="let category of categories">
+      <ng-template ngbPanelTitle>
+        <div class="row">
+          <div class="col-sm-8">
+            <span>{{ category.name }}</span>
+          </div>
+          <div class="col-sm-2">
+            <a href="#" class="btn btn-info btn-lg">
+            <span class="glyphicon glyphicon-edit"></span> Editer
+          </a>
+          </div>
+          <div class="col-sm-2">
+            <a href="#" class="btn btn-danger btn-lg" (click)="removeCategory(category, $event)">
+              <span class="glyphicon glyphicon-remove"></span> Supprimer 
+            </a>
+          </div>
+        </div>
+      </ng-template>
+      <button type="primary">Test</button>
+      <ng-template ngbPanelContent>
+        Produits
+      </ng-template>
+    </ngb-panel>
+  </ngb-accordion>
+</div>
 
 <div class="container">
   <form #f="ngForm" (ngSubmit)="addCategory(f)">
