--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -10,19 +10,21 @@
           </div>
           <div class="col-sm-2">
             <a href="#" class="btn btn-info btn-lg" (click)="toggleEdit(category, $event)">
-            <span class="glyphicon glyphicon-edit"></span> Editer
-          </a>
+              <span class="glyphicon glyphicon-edit"></span> Editer
+            </a>
           </div>
           <div class="col-sm-2">
             <a href="#" class="btn btn-danger btn-lg" (click)="remove(category, $event)">
-              <span class="glyphicon glyphicon-remove"></span> Supprimer 
+              <span class="glyphicon glyphicon-remove"></span> Supprimer
             </a>
           </div>
         </div>
       </ng-template>
       <button type="primary">Test</button>
       <ng-template ngbPanelContent>
-        Produits
+        <div *ngFor="let product of category.products">
+          {{ product.name }}
+        </div>
       </ng-template>
     </ngb-panel>
   </ngb-accordion>
